[package]
name = "drogue-es-wifi"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = {version = "0.2.4", features = ["unproven"] }
nb = "1.0.0"
log = "0.4.11"

