[package]
name = "drogue-es-wifi"
version = "0.1.2"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Inventek eS-WiFi offload board interface via SPI"
repository = "https://github.com/drogue-iot/drogue-es-wifi"
keywords = [ "driver", "spi", "inventek", "wifi", "no_std" ]
categories = ["no-std", "embedded"]
readme = "README.md"


[dependencies]
embedded-hal = {version = "0.2.4", features = ["unproven"] }
embedded-time = "0.10.0"
nb = "1.0.0"
log = "0.4.11"
heapless = "0.5.6"
drogue-embedded-timer = "0.2.1"
drogue-network = "0.2.0"
drogue-nom-utils = "0.1.0"

[dependencies.nom]
version= "5.1.2"
default-features = false

